--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:all": "yarn lint:prettier",
     "postinstall": "husky install",
-    "commit": "npx commitlint --from HEAD~1 --to HEAD --verbose"
+    "commit": "git commit"
   },
   "dependencies": {
     "@ant-design/colors": "^7.0.0",
