--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
+    "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\"",
     "lint:all": "yarn lint:prettier",
     "postinstall": "husky install",
     "commit": "git commit"
