--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md,ts}\"",
-    "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\"",
-    "lint:all": "yarn lint:prettier",
+    "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
+    "lint:stylelint": "stylelint --cache --fix  \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:lint-staged": "lint-staged",
     "postinstall": "husky install",
+    "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite",
     "commit": "git commit"
   },
   "dependencies": {
@@ -61,7 +63,7 @@
     "@types/qs": "^6.9.7",
     "@types/sortablejs": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.53.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-legacy": "^4.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
@@ -80,12 +82,23 @@
     "husky": "^8.0.3",
     "inquirer": "^9.1.4",
     "less": "^4.1.3",
+    "lint-staged": "^13.1.2",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "picocolors": "^1.0.0",
     "postcss": "^8.4.21",
+    "postcss-html": "^1.5.0",
+    "postcss-less": "^6.0.0",
     "prettier": "^2.8.4",
+    "rimraf": "^4.1.2",
     "rollup-plugin-visualizer": "^5.9.0",
+    "stylelint": "^15.2.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recommended-less": "^1.0.4",
+    "stylelint-config-standard": "^30.0.1",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "stylelint-less": "^1.0.6",
+    "stylelint-order": "^6.0.2",
     "tailwindcss": "^3.2.7",
     "typescript": "*",
     "vite": "^4.1.0",
@@ -99,9 +112,34 @@
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-theme": "^0.8.6",
+    "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.0.24"
   },
   "resolutions": {
     "bin-wrapper": "npm:bin-wrapper-china"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
+      "prettier --write--parser json"
+    ],
+    "package.json": [
+      "prettier --write"
+    ],
+    "*.vue": [
+      "eslint --fix",
+      "prettier --write",
+      "stylelint --fix"
+    ],
+    "*.{scss,less,style,html}": [
+      "stylelint --fix",
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
   }
 }
