--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "build:vite": "vue-tsc && vite build",
     "build": "cross-env NODE_ENV=production vite build && esno ./build/script/postBuild.ts",
     "preview": "vite preview",
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md,ts}\"",
@@ -79,6 +80,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.9.0",
+    "esno": "^0.16.3",
     "fs-extra": "^11.1.0",
     "husky": "^8.0.3",
     "inquirer": "^9.1.4",
